--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/fampay?retryWrites=true&w=majority
-YOUTUBE_API_KEYS=API_KEY_1,API_KEY_2 # comma-separated API keys
+MONGODB_URI=mongodb+srv://uphargaur:dccKnXLN4jRFl6br@cluster0.6oh8t.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+YOUTUBE_API_KEYS=AIzaSyCGFk0kFde3dwvdIwDe3IAJ8x6v2uO43yA,AIzaSyCqeV8IlGUsuMsPpRPqH8EkX13IiJrbPjQ # comma-separated API keys
 SEARCH_QUERY=official
 POLL_INTERVAL=10 # in seconds
 PORT=8080
